<resources>
    <string name="app_name" translatable="false">Shadow</string>
    <string name="install_url" translatable="false">https://shadowprivacy.com</string>
    <string name="backup_support_url" translatable="false">https://support.signal.org/hc/articles/360007059752</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait…</string>
    <string name="save">Save</string>
    <string name="note_to_self">Note to Self</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="AlbumThumbnailView_plus" translatable="false">\+%d</string>
    <string name="ApplicationMigrationActivity__signal_is_updating">Shadow is updating…</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">%d message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_passphrase">Disable passphrase?</string>
    <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">This will permanently unlock Shadow and message notifications.</string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_unregistering">Unregistering</string>
    <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Unregistering from Shadow messages and calls…</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Disable Shadow messages and calls?</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Disable Shadow messages and calls by unregistering from the server. You will need to re-register to use them again in the future.</string>
    <string name="ApplicationPreferencesActivity_error_connecting_to_server">Error connecting to server!</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">SMS Enabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Touch to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">SMS Disabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_make_signal_your_default_sms_app">Touch to make Shadow your default SMS app</string>
    <string name="ApplicationPreferencesActivity_on">on</string>
    <string name="ApplicationPreferencesActivity_On">On</string>
    <string name="ApplicationPreferencesActivity_off">off</string>
    <string name="ApplicationPreferencesActivity_Off">Off</string>
    <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary">Screen lock %1$s</string>
    <string name="ApplicationPreferencesActivity_appearance_summary">Theme %1$s, Language %2$s</string>
    <string name="ApplicationPreferencesActivity_hide">Hide</string>
    <string name="ApplicationPreferencesActivity_hide_reminder">Hide reminder?</string>
    <plurals name="AppProtectionPreferenceFragment_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="DraftDatabase_Draft_image_snippet">(image)</string>
    <string name="DraftDatabase_Draft_audio_snippet">(audio)</string>
    <string name="DraftDatabase_Draft_video_snippet">(video)</string>
    <string name="DraftDatabase_Draft_location_snippet">(location)</string>
    <string name="DraftDatabase_Draft_quote_snippet">(reply)</string>
    <string name="AttachmentKeyboard_gallery">Gallery</string>
    <string name="AttachmentKeyboard_gif">GIF</string>
    <string name="AttachmentKeyboard_file">File</string>
    <string name="AttachmentKeyboard_contact">Contact</string>
    <string name="AttachmentKeyboard_location">Location</string>
    <string name="AttachmentKeyboard_Signal_needs_permission_to_show_your_photos_and_videos">Shadow needs permission to show your photos and videos.</string>
    <string name="AttachmentKeyboard_give_access">Give Access</string>
    <string name="AttachmentManager_cant_open_media_selection">Can\'t find an app to select media.</string>
    <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Shadow requires the Storage permission in order to attach photos, videos, or audio, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Storage\".</string>
    <string name="RegistrationActivity_next">Next</string>
    <string name="RegistrationActivity_enter_your_user_login_to_get_started">Enter the login obtained from your administrator</string>
    <string name="RegistrationActivity_user_login">Login</string>
    <string name="preferences__generate_link_previews">Generate link previews</string>
    <string name="preferences__retrieve_link_previews_from_websites_for_messages">Retrieve link previews directly from websites for messages you send.</string>
    <string name="preferences__choose_identity">Choose identity</string>
    <string name="preferences__choose_your_contact_entry_from_the_contacts_list">Choose your contact entry from the contacts list.</string>
    <string name="preferences__change_passphrase">Change passphrase</string>
    <string name="preferences__change_your_passphrase">Change your passphrase</string>
    <string name="preferences__enable_passphrase">Enable passphrase screen lock</string>
    <string name="preferences__lock_signal_and_message_notifications_with_a_passphrase">Lock screen and notifications with a passphrase</string>
    <string name="preferences__screen_security">Screen security</string>
    <string name="preferences__disable_screen_security_to_allow_screen_shots">Block screenshots in the recents list and inside the app</string>
    <string name="preferences__auto_lock_signal_after_a_specified_time_interval_of_inactivity">Auto-lock Shadow after a specified time interval of inactivity</string>
    <string name="preferences__inactivity_timeout_passphrase">Inactivity timeout passphrase</string>
    <string name="preferences__inactivity_timeout_interval">Inactivity timeout interval</string>
    <string name="preferences__notifications">Notifications</string>
    <string name="preferences__help">Help</string>
    <string name="preferences__advanced">Advanced</string>
    <string name="preferences__privacy">Privacy</string>
    <string name="preferences__appearance">Appearance</string>
    <string name="preferences__signal_messages_and_calls">Shadow messages and calls</string>
    <string name="preferences__free_private_messages_and_calls">Free private messages and calls to Shadow users</string>
    <string name="preferences__submit_debug_log">Submit debug log</string>
    <string name="preferences__license_info">Server activation information</string>
    <string name="preferences__cert_pull">Certificate pull</string>
    <string name="preferences__update_in_roaming">Updates in roaming</string>
    <string name="preferences__allow_shadow_update_in_roaming">Allow Shadow to download updates in roaming</string>
    <string name="preferences__incognito_keyboard">Incognito keyboard</string>
    <string name="preferences__read_receipts">Read receipts</string>
    <string name="preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts">If read receipts are disabled, you won\'t be able to see read receipts from others.</string>
    <string name="preferences__typing_indicators">Typing indicators</string>
    <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">If typing indicators are disabled, you won\'t be able to see typing indicators from others.</string>
    <string name="preferences__request_keyboard_to_disable_personalized_learning">Request keyboard to disable personalized learning</string>
    <string name="preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address">Relay all calls through the Shadow server to avoid revealing your IP address to your contact. Enabling will reduce call quality.</string>
    <string name="preferences_advanced__always_relay_calls">Always relay calls</string>
    <string name="preferences_app_protection__who_can">Who can…</string>
    <string name="preferences_app_protection__app_access">App access</string>
    <string name="preferences_app_protection__communication">Communication</string>
    <string name="preferences_chats__chats">Chats</string>
    <string name="preferences_communication__category_sealed_sender">Sealed Sender</string>
    <string name="preferences_communication__sealed_sender_display_indicators">Display indicators</string>
    <string name="preferences_communication__sealed_sender_display_indicators_description">Show a status icon when you select "Message details" on messages that were delivered using sealed sender.</string>
    <string name="preferences__internal_preferences" translatable="false">Internal Preferences</string>
    <string name="conversation_context__menu_message_details">Message details</string>
    <string name="conversation_context__menu_copy_text">Copy text</string>
    <string name="conversation_context__menu_delete_message">Delete message</string>
    <string name="conversation_context__menu_forward_message">Forward message</string>
    <string name="conversation_context__menu_resend_message">Resend message</string>
    <string name="conversation_context__menu_reply_to_message">Reply to message</string>
    <string name="conversation_context_image__save_attachment">Save attachment</string>
    <string name="conversation_group_options__delivery">Delivery</string>
    <string name="conversation_group_options__conversation">Conversation</string>
    <string name="conversation_group_options__broadcast">Broadcast</string>
    <string name="media_preview__save_title">Save</string>
    <string name="media_preview__forward_title">Forward</string>
    <string name="media_preview__all_media_title">All media</string>
    <string name="preferences_app_protection__see_my_phone_number">See my user login</string>
    <string name="preferences_app_protection__find_me_by_phone_number">Find me by user login</string>
    <string name="preferences_app_protection__screen_lock">Screen lock</string>
    <string name="preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint">Lock Shadow access with Android screen lock or fingerprint</string>
    <string name="preferences_app_protection__screen_lock_inactivity_timeout">Screen lock inactivity timeout</string>
</resources>