<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="category_user_login_privacy"
        android:title="@string/preferences_app_protection__who_can">

        <Preference
            android:key="pref_who_can_see_user_login"
            android:title="@string/preferences_app_protection__see_my_phone_number" />

        <Preference
            android:key="pref_who_can_find_by_user_login"
            android:title="@string/preferences_app_protection__find_me_by_phone_number" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_app_protection__app_access">

        <su.sres.securesms.components.SwitchPreferenceCompat
                android:key="pref_android_screen_lock"
                android:defaultValue="false"
                android:title="@string/preferences_app_protection__screen_lock"
                android:summary="@string/preferences_app_protection__lock_signal_access_with_android_screen_lock_or_fingerprint"/>

        <Preference android:title="@string/preferences_app_protection__screen_lock_inactivity_timeout"
                    android:key="pref_android_screen_lock_timeout"
                    android:dependency="pref_android_screen_lock"/>

        <su.sres.securesms.components.SwitchPreferenceCompat
                            android:key="pref_enable_passphrase_temporary"
                            android:defaultValue="true"
                            android:title="@string/preferences__enable_passphrase"
                            android:summary="@string/preferences__lock_signal_and_message_notifications_with_a_passphrase"/>

        <Preference android:key="pref_change_passphrase"
                    android:title="@string/preferences__change_passphrase"
                    android:summary="@string/preferences__change_your_passphrase"
                    android:dependency="pref_enable_passphrase_temporary"/>

        <su.sres.securesms.components.SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="pref_timeout_passphrase"
                android:title="@string/preferences__inactivity_timeout_passphrase"
                android:summary="@string/preferences__auto_lock_signal_after_a_specified_time_interval_of_inactivity"
                android:dependency="pref_enable_passphrase_temporary"/>

        <Preference android:title="@string/preferences__inactivity_timeout_interval"
                    android:key="pref_timeout_interval"
                    android:dependency="pref_timeout_passphrase"/>

        <su.sres.securesms.components.SwitchPreferenceCompat
                            android:defaultValue="false"
                            android:key="pref_screen_security"
                            android:title="@string/preferences__screen_security"
                            android:summary="@string/preferences__disable_screen_security_to_allow_screen_shots" />

        <su.sres.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_incognito_keyboard"
            android:title="@string/preferences__incognito_keyboard"
            android:summary="@string/preferences__request_keyboard_to_disable_personalized_learning"/>
    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_divider"/>

    <PreferenceCategory android:title="@string/preferences_app_protection__communication">
        <su.sres.securesms.components.SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="pref_turn_only"
                android:title="@string/preferences_advanced__always_relay_calls"
                android:summary="@string/preferences_advanced__relay_all_calls_through_the_signal_server_to_avoid_revealing_your_ip_address"/>

        <su.sres.securesms.components.SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="pref_read_receipts"
                android:title="@string/preferences__read_receipts"
                android:summary="@string/preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts"/>

        <su.sres.securesms.components.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_typing_indicators"
            android:title="@string/preferences__typing_indicators"
            android:summary="@string/preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators"/>

        <su.sres.securesms.components.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="settings.link_previews"
            android:summary="@string/preferences__retrieve_link_previews_from_websites_for_messages"
            android:title="@string/preferences__generate_link_previews" />

        <Preference android:key="preference_category_blocked"
            android:title="@string/preferences_app_protection__blocked_users" />
    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_divider"/>

    <PreferenceCategory android:title="@string/preferences_communication__category_sealed_sender">
        <su.sres.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_show_unidentifed_delivery_indicators"
            android:title="@string/preferences_communication__sealed_sender_display_indicators"
            android:summary="@string/preferences_communication__sealed_sender_display_indicators_description"/>

<!--        <su.sres.securesms.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_universal_unidentified_access"
            android:title="@string/preferences_communication__sealed_sender_allow_from_anyone"
            android:summary="@string/preferences_communication__sealed_sender_allow_from_anyone_description"/> -->

        <Preference
            android:key="pref_unidentified_learn_more"
            android:layout="@layout/unidentified_delivery_learn_more" />

    </PreferenceCategory>

</PreferenceScreen>
