<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <su.sres.securesms.components.SwitchPreferenceCompat
                        android:defaultValue="false"
                        android:key="pref_toggle_push_messaging"
                        android:title="@string/preferences__signal_messages_and_calls"
                        android:summary="@string/preferences__free_private_messages_and_calls"/>

    <Preference android:key="pref_choose_identity"
                android:title="@string/preferences__choose_identity"
                android:summary="@string/preferences__choose_your_contact_entry_from_the_contacts_list"/>

   <Preference android:key="pref_submit_debug_logs"
               android:title="@string/preferences__submit_debug_log"/>

    <Preference android:key="pref_license_info"
                android:title="@string/preferences__license_info"
                android:persistent="false"/>

    <Preference android:key="pref_cert_pull"
        android:title="@string/preferences__cert_pull"
        android:persistent="false"/>

    <Preference android:key="pref_internal"
        android:title="@string/preferences__internal_preferences"
        app:isPreferenceVisible="false" />

    <su.sres.securesms.components.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="settings.update_in_roaming"
        android:title="@string/preferences__update_in_roaming"
        android:summary="@string/preferences__allow_shadow_update_in_roaming"/>

    <PreferenceCategory android:layout="@layout/preference_divider"/>

    <Preference
        android:layout="@layout/preference_danger"
        android:key="pref_delete_account"
        android:title="@string/preferences__delete_account" />

</PreferenceScreen>
