<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <su.sres.securesms.preferences.widgets.ProfilePreference android:key="preference_category_profile" />

    <su.sres.securesms.preferences.widgets.UsernamePreference
        android:key="preference_category_username"
        app:isPreferenceVisible="false" />

    <Preference
        android:icon="@drawable/ic_bell_24"
        android:key="preference_category_notifications"
        android:title="@string/preferences__notifications" />

    <Preference
        android:icon="@drawable/ic_lock_24"
        android:key="preference_category_app_protection"
        android:title="@string/preferences__privacy" />

    <Preference
        android:icon="@drawable/ic_appearance_24"
        android:key="preference_category_appearance"
        android:title="@string/preferences__appearance" />

    <Preference
        android:icon="@drawable/ic_photo_24"
        android:key="preference_category_chats"
        android:title="@string/preferences_chats__chats" />

    <Preference
        android:icon="@drawable/ic_archive_24dp"
        android:key="preference_category_storage"
        android:title="@string/preferences__data_and_storage" />

    <!--    <Preference android:key="preference_category_devices"
                    android:title="@string/preferences__linked_devices"
            android:icon="@drawable/ic_linked_devices_24"/> -->

    <Preference
        android:icon="@drawable/ic_help_24"
        android:key="preference_category_help"
        android:title="@string/preferences__help" />

    <Preference
        android:icon="@drawable/ic_advanced_24"
        android:key="preference_category_advanced"
        android:title="@string/preferences__advanced" />

</PreferenceScreen>
