<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/media_preview__forward"
        android:icon="?menu_forward_icon"
        android:title="@string/media_preview__forward_title"
        app:showAsAction="never"/>
    <item android:id="@+id/media_preview__share"
        android:title="@string/media_preview__share_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_download_filled_white_24"
        android:title="@string/media_preview__save_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/media_preview__overview"
        android:icon="@drawable/ic_photo_library_white_24dp"
        android:title="@string/media_preview__all_media_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/delete"
        android:icon="?menu_trash_icon"
        android:title="@string/delete"
        app:showAsAction="never"/>
</menu>
